--- a/Kontur.Frut.1/Base.lproj/Main.storyboard
+++ b/Kontur.Frut.1/Base.lproj/Main.storyboard
@@ -894,13 +894,21 @@
                     </view>
                     <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="MfX-Eq-sai">
                         <barButtonItem key="backBarButtonItem" title="Назад" id="FAB-Zf-B5r"/>
-                        <barButtonItem key="rightBarButtonItem" title="История" width="100" id="FB5-rS-YRl">
-                            <connections>
-                                <segue destination="7ee-4W-Azn" kind="show" identifier="SegueToHistoryTVC" id="2un-vN-Ic2"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem title="История" width="100" id="FB5-rS-YRl">
+                                <connections>
+                                    <segue destination="7ee-4W-Azn" kind="show" identifier="SegueToHistoryTVC" id="2un-vN-Ic2"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem enabled="NO" title="Фото ПП" id="rPG-fV-elU">
+                                <connections>
+                                    <segue destination="DeA-8p-vAj" kind="show" id="ztv-oO-LDl"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
+                        <outlet property="btnPhoto" destination="rPG-fV-elU" id="MDD-8r-mZB"/>
                         <outlet property="lblHeader" destination="w4S-zb-g8N" id="kY4-AQ-yNA"/>
                         <outlet property="lblKontra" destination="Kuf-Wn-4k9" id="KSr-KW-u0g"/>
                         <outlet property="lblNaznch" destination="Mie-sb-YpR" id="Dml-ug-esn"/>
@@ -919,6 +927,37 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FW4-Bu-arj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1282" y="174"/>
+        </scene>
+        <!--Pict OrderVC-->
+        <scene sceneID="z0y-gn-Ir5">
+            <objects>
+                <viewController id="DeA-8p-vAj" customClass="PictOrderVC" customModule="Kontur_Frut_1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UOQ-2p-My3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7WJ-X9-7cW">
+                                <rect key="frame" x="0.0" y="88" width="375" height="690"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="7Jw-sN-Pzs"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="7WJ-X9-7cW" firstAttribute="top" secondItem="7Jw-sN-Pzs" secondAttribute="top" id="B3V-nz-WiQ"/>
+                            <constraint firstItem="7WJ-X9-7cW" firstAttribute="leading" secondItem="7Jw-sN-Pzs" secondAttribute="leading" id="XPT-c2-wXf"/>
+                            <constraint firstItem="7WJ-X9-7cW" firstAttribute="centerX" secondItem="UOQ-2p-My3" secondAttribute="centerX" id="aQh-qY-xrm"/>
+                            <constraint firstItem="7Jw-sN-Pzs" firstAttribute="bottom" secondItem="7WJ-X9-7cW" secondAttribute="bottom" id="cXn-rv-dGT"/>
+                            <constraint firstItem="7Jw-sN-Pzs" firstAttribute="trailing" secondItem="7WJ-X9-7cW" secondAttribute="trailing" id="l3E-nb-pPY"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Fdo-Rr-Wnb"/>
+                    <connections>
+                        <outlet property="imageView" destination="7WJ-X9-7cW" id="heU-DD-qp3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="03n-pk-Hlt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1282" y="890"/>
         </scene>
         <!--Date PopupVC-->
         <scene sceneID="dHg-vc-HxX">
